--- a/lab03.cbp
+++ b/lab03.cbp
@@ -32,6 +32,12 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Linker>
+			<Add option="-static-libstdc++" />
+			<Add option="-static-libgcc" />
+			<Add option="-static" />
+		</Linker>
+		<Unit filename=".gitignore" />
 		<Unit filename="main.cpp" />
 		<Extensions />
 	</Project>
